modificações e inclusão de novas imagens

--- a/index.html
+++ b/index.html
@@ -20,297 +20,346 @@
         <img src="assets/images/1.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 01</h3>
+        <h3>R$2.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-02" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-02" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/2.png" alt="Urna 02" />
       <div class="thumbnail-container">
         <img src="assets/images/2.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 02</h3>
+        <h3>R$3.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-03" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-03" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/3.png" alt="Urna 01" />
       <div class="thumbnail-container">
         <img src="assets/images/3.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 03</h3>
+        <h3>3.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-04" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-04" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/4.png" alt="Urna 04" />
       <div class="thumbnail-container">
         <img src="assets/images/4.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 04</h3>
+        <h3>R$5.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-05" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-05" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/5.png" alt="Urna 05" />
       <div class="thumbnail-container">
         <img src="assets/images/5.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 05</h3>
+        <h3>R$6.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-06" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-06" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/6.png" alt="Urna 06" />
       <div class="thumbnail-container">
         <img src="assets/images/6.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 06</h3>
+        <h3>R$6.300,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-07" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-07" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/7.png" alt="Urna 07" />
       <div class="thumbnail-container">
         <img src="assets/images/7.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 07</h3>
+        <h3>R$7.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-08" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-08" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/8.png" alt="Urna 08" />
       <div class="thumbnail-container">
         <img src="assets/images/8.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 08</h3>
+        <h3>R$5.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-09" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-09" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/9.png" alt="Urna 09" />
       <div class="thumbnail-container">
         <img src="assets/images/9.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 09</h3>
+        <h3>R$5.800,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-10" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-10" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/10.png" alt="Urna 10" />
       <div class="thumbnail-container">
         <img src="assets/images/10.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 10</h3>
+        <h3>R$6.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-11" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-11" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/11.png" alt="Urna 11" />
       <div class="thumbnail-container">
         <img src="assets/images/11.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 11</h3>
+        <h3>R$6.800,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-12" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-12" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/12.png" alt="Urna 12" />
       <div class="thumbnail-container">
         <img src="assets/images/12.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 12</h3>
+        <h3>R$9.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-13" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-13" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/13.png" alt="Urna 13" />
       <div class="thumbnail-container">
         <img src="assets/images/13.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 13</h3>
+        <h3>R$8.900,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-14" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-14" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/14.png" alt="Urna 14" />
       <div class="thumbnail-container">
         <img src="assets/images/14.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 14</h3>
+        <h3>R$10.000,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-15" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-15" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/15.png" alt="Urna 15" />
       <div class="thumbnail-container">
         <img src="assets/images/15.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 15</h3>
+        <h3>R$9.800,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-16" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-16" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/16.png" alt="Urna 16" />
       <div class="thumbnail-container">
         <img src="assets/images/16.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 16</h3>
+        <h3>R$9.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-17" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-17" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/17.png" alt="Urna 17" />
       <div class="thumbnail-container">
         <img src="assets/images/17.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 17</h3>
+        <h3>R$9.200,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-18" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-18" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/18.png" alt="Urna 18" />
       <div class="thumbnail-container">
         <img src="assets/images/18.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 18</h3>
+        <h3>R$6.000,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-19" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-19" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/19.png" alt="Urna 19" />
       <div class="thumbnail-container">
         <img src="assets/images/19.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 19</h3>
+        <h3>R$6.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-20" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+    <div class="product-card" data-nome="urna-20" data-descricao="Urna simples alça dura">
       <img class="main-image" src="assets/images/20.png" alt="Urna 20" />
       <div class="thumbnail-container">
         <img src="assets/images/20.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 20</h3>
+        <h3>R$3.550,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-01" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/1.png" alt="Urna 01" />
+    <div class="product-card" data-nome="urna-21" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/21.png" alt="Urna 21" />
       <div class="thumbnail-container">
-        <img src="assets/images/1.png" alt="Thumb 1" />
+        <img src="assets/images/21.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 22</h3>
+        <h3>R$8.800,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-01" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/1.png" alt="Urna 01" />
+    <div class="product-card" data-nome="urna-22" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/22.png" alt="Urna 22" />
       <div class="thumbnail-container">
-        <img src="assets/images/1.png" alt="Thumb 1" />
+        <img src="assets/images/22.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 23</h3>
+        <h3>R$9.800,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-01" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/1.png" alt="Urna 01" />
+    <div class="product-card" data-nome="urna-23" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/23.png" alt="Urna 23" />
       <div class="thumbnail-container">
-        <img src="assets/images/1.png" alt="Thumb 1" />
+        <img src="assets/images/23.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 24</h3>
+        <h3>R$8.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-01" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/1.png" alt="Urna 01" />
+    <div class="product-card" data-nome="urna-24" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/24.png" alt="Urna 24" />
       <div class="thumbnail-container">
-        <img src="assets/images/1.png" alt="Thumb 1" />
+        <img src="assets/images/24.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 25</h3>
+        <h3>R$6.200,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-01" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/1.png" alt="Urna 01" />
+    <div class="product-card" data-nome="urna-25" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/25.png" alt="Urna 25" />
       <div class="thumbnail-container">
-        <img src="assets/images/1.png" alt="Thumb 1" />
+        <img src="assets/images/25.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 26</h3>
+        <h3>R$6.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-01" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/1.png" alt="Urna 01" />
+    <div class="product-card" data-nome="urna-26" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/26.png" alt="Urna 26" />
       <div class="thumbnail-container">
-        <img src="assets/images/1.png" alt="Thumb 1" />
+        <img src="assets/images/26.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 27</h3>
+        <h3>R$7.800,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-01" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/1.png" alt="Urna 01" />
+    <div class="product-card" data-nome="urna-27" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/27.png" alt="Urna 27" />
       <div class="thumbnail-container">
-        <img src="assets/images/1.png" alt="Thumb 1" />
+        <img src="assets/images/27.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 28</h3>
+        <h3>R$10.000,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-01" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/1.png" alt="Urna 01" />
+    <div class="product-card" data-nome="urna-28" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/28.png" alt="Urna 28" />
       <div class="thumbnail-container">
-        <img src="assets/images/1.png" alt="Thumb 1" />
+        <img src="assets/images/28.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 29</h3>
+        <h3>R$9.500,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-01" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/1.png" alt="Urna 01" />
+    <div class="product-card" data-nome="urna-29" data-descricao="Urna simples alça dura"
       <div class="thumbnail-container">
-        <img src="assets/images/1.png" alt="Thumb 1" />
+        <img src="assets/images/29.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 30</h3>
+        <h3>R$9.000,00</h3>
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-01" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/1.png" alt="Urna 01" />
+    <div class="product-card" data-nome="urna-30" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/30.png" alt="Urna 30" />
       <div class="thumbnail-container">
-        <img src="assets/images/1.png" alt="Thumb 1" />
+        <img src="assets/images/30.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>Urna 04</h3>
+        <h3>R$7.100,00</h3>
+      </div>
+    </div>
+
+    <div class="product-card" data-nome="urna-31" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/31.png" alt="Urna 31" />
+      <div class="thumbnail-container">
+        <img src="assets/images/31.png" alt="Thumb 1" />
+      </div>
+      <div class="product-info">
+        <h3>R$9.900,00</h3>
+      </div>
+    </div>
+
+    <div class="product-card" data-nome="urna-32" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/32.png" alt="Urna 32" />
+      <div class="thumbnail-container">
+        <img src="assets/images/32.png" alt="Thumb 1" />
+      </div>
+      <div class="product-info">
+        <h3>R$12.500,00</h3>
+      </div>
+    </div>
+
+    <div class="product-card" data-nome="urna-33" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/33.png" alt="Urna 33" />
+      <div class="thumbnail-container">
+        <img src="assets/images/33.png" alt="Thumb 1" />
+      </div>
+      <div class="product-info">
+        <h3>R$18.000,00</h3>
+      </div>
+    </div>
+
+    <div class="product-card" data-nome="urna-34" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/34.png" alt="Urna 34" />
+      <div class="thumbnail-container">
+        <img src="assets/images/34.png" alt="Thumb 1" />
+      </div>
+      <div class="product-info">
+        <h3>R$16.200,00</h3>
+      </div>
+    </div>
+
+    <div class="product-card" data-nome="urna-35" data-descricao="Urna simples alça dura">
+      <img class="main-image" src="assets/images/35.png" alt="Urna 35" />
+      <div class="thumbnail-container">
+        <img src="assets/images/35.png" alt="Thumb 1" />
+      </div>
+      <div class="product-info">
+        <h3>R$12.000,00</h3>
       </div>
     </div>
     
