--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-02" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-02" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/2.png" alt="Urna 02" />
       <div class="thumbnail-container">
         <img src="assets/images/2.png" alt="Thumb 1" />
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-03" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-03" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/3.png" alt="Urna 01" />
       <div class="thumbnail-container">
         <img src="assets/images/3.png" alt="Thumb 1" />
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-04" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-04" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/4.png" alt="Urna 04" />
       <div class="thumbnail-container">
         <img src="assets/images/4.png" alt="Thumb 1" />
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-05" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-05" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/5.png" alt="Urna 05" />
       <div class="thumbnail-container">
         <img src="assets/images/5.png" alt="Thumb 1" />
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-06" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-06" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/6.png" alt="Urna 06" />
       <div class="thumbnail-container">
         <img src="assets/images/6.png" alt="Thumb 1" />
@@ -74,7 +74,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-07" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-07" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/7.png" alt="Urna 07" />
       <div class="thumbnail-container">
         <img src="assets/images/7.png" alt="Thumb 1" />
@@ -84,7 +84,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-08" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-08" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/8.png" alt="Urna 08" />
       <div class="thumbnail-container">
         <img src="assets/images/8.png" alt="Thumb 1" />
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-09" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-09" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/9.png" alt="Urna 09" />
       <div class="thumbnail-container">
         <img src="assets/images/9.png" alt="Thumb 1" />
@@ -104,7 +104,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-10" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-10" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/10.png" alt="Urna 10" />
       <div class="thumbnail-container">
         <img src="assets/images/10.png" alt="Thumb 1" />
@@ -114,7 +114,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-11" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-11" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/11.png" alt="Urna 11" />
       <div class="thumbnail-container">
         <img src="assets/images/11.png" alt="Thumb 1" />
@@ -124,7 +124,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-12" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-12" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/12.png" alt="Urna 12" />
       <div class="thumbnail-container">
         <img src="assets/images/12.png" alt="Thumb 1" />
@@ -134,7 +134,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-13" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-13" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/13.png" alt="Urna 13" />
       <div class="thumbnail-container">
         <img src="assets/images/13.png" alt="Thumb 1" />
@@ -144,7 +144,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-14" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-14" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/14.png" alt="Urna 14" />
       <div class="thumbnail-container">
         <img src="assets/images/14.png" alt="Thumb 1" />
@@ -154,7 +154,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-15" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-15" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/15.png" alt="Urna 15" />
       <div class="thumbnail-container">
         <img src="assets/images/15.png" alt="Thumb 1" />
@@ -164,7 +164,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-16" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-16" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/16.png" alt="Urna 16" />
       <div class="thumbnail-container">
         <img src="assets/images/16.png" alt="Thumb 1" />
@@ -174,7 +174,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-17" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-17" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/17.png" alt="Urna 17" />
       <div class="thumbnail-container">
         <img src="assets/images/17.png" alt="Thumb 1" />
@@ -184,7 +184,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-18" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-18" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/18.png" alt="Urna 18" />
       <div class="thumbnail-container">
         <img src="assets/images/18.png" alt="Thumb 1" />
@@ -194,7 +194,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-19" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-19" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/19.png" alt="Urna 19" />
       <div class="thumbnail-container">
         <img src="assets/images/19.png" alt="Thumb 1" />
@@ -204,7 +204,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-20" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-20" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/20.png" alt="Urna 20" />
       <div class="thumbnail-container">
         <img src="assets/images/20.png" alt="Thumb 1" />
@@ -214,7 +214,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-21" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-21" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/21.png" alt="Urna 21" />
       <div class="thumbnail-container">
         <img src="assets/images/21.png" alt="Thumb 1" />
@@ -224,7 +224,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-22" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-22" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/22.png" alt="Urna 22" />
       <div class="thumbnail-container">
         <img src="assets/images/22.png" alt="Thumb 1" />
@@ -234,7 +234,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-23" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-23" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/23.png" alt="Urna 23" />
       <div class="thumbnail-container">
         <img src="assets/images/23.png" alt="Thumb 1" />
@@ -244,7 +244,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-24" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-24" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/24.png" alt="Urna 24" />
       <div class="thumbnail-container">
         <img src="assets/images/24.png" alt="Thumb 1" />
@@ -254,7 +254,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-25" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-25" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/25.png" alt="Urna 25" />
       <div class="thumbnail-container">
         <img src="assets/images/25.png" alt="Thumb 1" />
@@ -264,7 +264,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-26" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-26" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/26.png" alt="Urna 26" />
       <div class="thumbnail-container">
         <img src="assets/images/26.png" alt="Thumb 1" />
@@ -274,7 +274,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-27" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-27" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/27.png" alt="Urna 27" />
       <div class="thumbnail-container">
         <img src="assets/images/27.png" alt="Thumb 1" />
@@ -284,7 +284,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-28" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-28" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/28.png" alt="Urna 28" />
       <div class="thumbnail-container">
         <img src="assets/images/28.png" alt="Thumb 1" />
@@ -294,7 +294,8 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-29" data-descricao="Urna simples alça dura"
+    <div class="product-card" data-nome="urna-29" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
+      <img class="main-image" src="assets/images/29" alt="Urna 29" />
       <div class="thumbnail-container">
         <img src="assets/images/29.png" alt="Thumb 1" />
       </div>
@@ -303,7 +304,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-30" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-30" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/30.png" alt="Urna 30" />
       <div class="thumbnail-container">
         <img src="assets/images/30.png" alt="Thumb 1" />
@@ -313,7 +314,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-31" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-31" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/31.png" alt="Urna 31" />
       <div class="thumbnail-container">
         <img src="assets/images/31.png" alt="Thumb 1" />
@@ -323,7 +324,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-32" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-32" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/32.png" alt="Urna 32" />
       <div class="thumbnail-container">
         <img src="assets/images/32.png" alt="Thumb 1" />
@@ -333,7 +334,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-33" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-33" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/33.png" alt="Urna 33" />
       <div class="thumbnail-container">
         <img src="assets/images/33.png" alt="Thumb 1" />
@@ -343,7 +344,7 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-34" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-34" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/34.png" alt="Urna 34" />
       <div class="thumbnail-container">
         <img src="assets/images/34.png" alt="Thumb 1" />
@@ -353,13 +354,13 @@
       </div>
     </div>
 
-    <div class="product-card" data-nome="urna-35" data-descricao="Urna simples alça dura">
+    <div class="product-card" data-nome="urna-35" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
       <img class="main-image" src="assets/images/35.png" alt="Urna 35" />
       <div class="thumbnail-container">
         <img src="assets/images/35.png" alt="Thumb 1" />
       </div>
       <div class="product-info">
-        <h3>R$12.000,00</h3>
+        <h3>R$12.00,00</h3>
       </div>
     </div>
     
