Correção de imagem faltando

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     </div>
 
     <div class="product-card" data-nome="urna-29" data-descricao="Urna simples alça dura" data-imagem="assets/images/1.png">
-      <img class="main-image" src="assets/images/29" alt="Urna 29" />
+      <img class="main-image" src="assets/images/29.png" alt="Urna 29" />
       <div class="thumbnail-container">
         <img src="assets/images/29.png" alt="Thumb 1" />
       </div>
