Correção do título

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>Catálogo de Produtos</h1>
+    <h1>Catálogo de Urnas - Funerária Jardim da Saudade</h1>
   </header>
 
   <section class="carousel" id="productCarousel">
